Fix default rendering of images that are too wide

--- a/reset/index.scss
+++ b/reset/index.scss
@@ -119,6 +119,7 @@ audio:not([controls]) {
 img {
 	border-style: none;
 	max-width: 100%;
+	height: auto;
 }
 
 iframe {
